samples/_failures_safe/1761126440_35bced_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b260bc7.c: In function ‘main’:
./samples/SAFE/__tmp_0b260bc7.c:146:9: error: expected declaration or statement at end of input
  146 |         if (len > 0 && input_text[len - 1] == '\n') {
      |         ^~
./samples/SAFE/__tmp_0b260bc7.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0b260bc7.c:146:9: error: expected declaration or statement at end of input
